fixed the alignment for form inputs and header nav links

--- a/watermyplants/src/styles/general.scss
+++ b/watermyplants/src/styles/general.scss
@@ -2,16 +2,22 @@ body {
   background-image: url("https://images.unsplash.com/photo-1462530348824-65844534c0ed?ixlib=rb-1.2.1&auto=format&fit=crop&w=1352&q=80");
   background-repeat: no-repeat;
   background-size: cover;
+  font-family: "Kalam", cursive;
 
   header {
     display: flex;
     width: 100%;
     background: #1a3c40;
     justify-content: space-around;
+    font-size: 2.3rem;
+    height: 10vh;
+    
+
 
     h1 {
       color: #e4eddb;
-      margin-top: 20px;
+      margin: 40px;
+  
     }
 
     nav {
